package com.lbc.practice.movieapp.view;


import android.support.test.espresso.ViewInteraction;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.test.suitebuilder.annotation.LargeTest;
import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import com.lbc.practice.movieapp.R;
import com.lbc.practice.movieapp.view.main.MainActivity;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.hamcrest.core.IsInstanceOf;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.Espresso.pressBack;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.contrib.RecyclerViewActions.actionOnItemAtPosition;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class MainActivityTest {

    @Rule
    public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<>(MainActivity.class);

    @Test
    public void mainActivityTest() {

        sleep();

        ViewInteraction recyclerView = onView(
                allOf(withId(R.id.main_recyclerview),
                        childAtPosition(
                                withId(R.id.main_swiperefreshlayout),
                                0)));
        recyclerView.perform(actionOnItemAtPosition(0, click()));

        sleep();

        pressBack();

        sleep();

        ViewInteraction recyclerView2 = onView(
                allOf(withId(R.id.main_recyclerview),
                        childAtPosition(
                                withId(R.id.main_swiperefreshlayout),
                                0)));
        recyclerView2.perform(actionOnItemAtPosition(1, click()));

        sleep();

        pressBack();

        sleep();

        ViewInteraction recyclerView3 = onView(
                allOf(withId(R.id.main_recyclerview),
                        childAtPosition(
                                withId(R.id.main_swiperefreshlayout),
                                0)));
        recyclerView3.perform(actionOnItemAtPosition(2, click()));
        sleep();


        ViewInteraction textView = onView(
                allOf(withId(R.id.second_tv), withText("줄거리"),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.FrameLayout.class),
                                        0),
                                4),
                        isDisplayed()));
        textView.check(matches(withText("줄거리")));

        pressBack();

        sleep();
    }

    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent)
                        && view.equals(((ViewGroup) parent).getChildAt(position));
            }
        };
    }

    private static void sleep() {
        try {
            Thread.sleep(1500L);
        }catch (InterruptedException e) {
            e.printStackTrace();
        }
    }
}
